--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -77,7 +77,7 @@ http {
     limit_req_zone $binary_remote_addr zone=login_limit:10m rate=10r/m;        # 10 requests per minute for login
     limit_req_zone $binary_remote_addr zone=register_limit:10m rate=5r/m;      # 5 requests per minute for register
     limit_req_zone $binary_remote_addr zone=strict_limit:10m rate=30r/m;       # 30 requests per minute for general endpoints
-    limit_req_zone $binary_remote_addr zone=health_limit:10m rate=60r/m;       # 60 requests per minute for health checks
+    #limit_req_zone $binary_remote_addr zone=health_limit:10m rate=60r/m;       # 60 requests per minute for health checks
     limit_req_zone $binary_remote_addr zone=chat_unlimited:10m rate=1000r/m;   # High limit for chat (authenticated users)
     limit_req_zone $binary_remote_addr zone=admin_unlimited:10m rate=500r/m;   # High limit for admin (authenticated users)
     
@@ -96,7 +96,7 @@ http {
         server quart-app:8000 max_fails=3 fail_timeout=30s;
         keepalive 32;
         keepalive_requests 1000;
-        keepalive_timeout 60s;
+        keepalive_timeout 120s;
     }
 
     # Main server block
@@ -110,6 +110,14 @@ http {
         }
 
         root /usr/share/nginx/html;
+
+        # =====================================================
+        # COMMON PROXY HEADERS - Applied to all proxy locations
+        # =====================================================
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
         # =====================================================
         # STATIC FILES - served directly from nginx
@@ -126,245 +134,84 @@ http {
         # AUTHENTICATION ROUTES - STRICT rate limits
         # =====================================================
         
-        # Login endpoint - VERY strict limits
         location = /login {
             limit_req zone=login_limit burst=3 nodelay;
-            
             proxy_pass http://quart_backend/login;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # STRICT timeouts for auth endpoints
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
         
-        # Register endpoint - VERY strict limits
         location = /register {
             limit_req zone=register_limit burst=2 nodelay;
-            
             proxy_pass http://quart_backend/register;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # STRICT timeouts for auth endpoints
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
         
-        # Logout endpoint - Standard limits
         location = /logout {
             limit_req zone=strict_limit burst=5 nodelay;
-            
             proxy_pass http://quart_backend/logout;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # STRICT timeouts
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
         
         # =====================================================
         # CHAT ROUTES - Higher limits for authenticated users
         # =====================================================
         
-        # Main chat page
         location = /chat {
             limit_req zone=chat_unlimited burst=100 nodelay;
-            
-            client_max_body_size 10M;
-            
+            client_max_body_size 1000M;
             proxy_pass http://quart_backend/chat;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Standard timeouts for GET requests
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
         
-        # Chat streaming endpoint - UNLIMITED timeouts
         location = /chat/stream {
             limit_req zone=chat_unlimited burst=50 nodelay;
-            
             proxy_pass http://quart_backend/chat/stream;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # UNLIMITED TIMEOUTS for streaming
-            proxy_buffering off;
-            proxy_cache off;
-            proxy_request_buffering off;
-            proxy_set_header Connection "";
-            proxy_http_version 1.1;
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
         }
         
-        # Chat interrupt endpoint
         location = /chat/interrupt {
             limit_req zone=chat_unlimited burst=20 nodelay;
-            
             proxy_pass http://quart_backend/chat/interrupt;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Quick timeouts for interrupt
-            proxy_connect_timeout 5s;
-            proxy_send_timeout 10s;
-            proxy_read_timeout 10s;
         }
         
-        # Chat clear endpoint
         location = /chat/clear {
             limit_req zone=chat_unlimited burst=10 nodelay;
-            
             proxy_pass http://quart_backend/chat/clear;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Standard timeouts
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
         
-        # Chat session deletion
         location = /chat/delete_session {
             limit_req zone=chat_unlimited burst=10 nodelay;
-            
             proxy_pass http://quart_backend/chat/delete_session;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Standard timeouts
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
         
         # =====================================================
         # ADMIN ROUTES - Higher limits for admin users
         # =====================================================
         
-        # Main admin dashboard
         location = /admin {
             limit_req zone=admin_unlimited burst=50 nodelay;
-            
-            client_max_body_size 5M;
-            
+            client_max_body_size 1000M;
             proxy_pass http://quart_backend/admin;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # UNLIMITED TIMEOUTS for admin operations
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
         }
         
-        # Admin cleanup operations
         location = /admin/cleanup {
             limit_req zone=admin_unlimited burst=5 nodelay;
-            
             proxy_pass http://quart_backend/admin/cleanup;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Extended timeouts for cleanup operations
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 120s;
         }
         
-        # Admin approve user
         location = /admin/approve_user {
             limit_req zone=admin_unlimited burst=10 nodelay;
-            
             proxy_pass http://quart_backend/admin/approve_user;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Standard timeouts
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
         
-        # Admin reject user
         location = /admin/reject_user {
             limit_req zone=admin_unlimited burst=10 nodelay;
-            
             proxy_pass http://quart_backend/admin/reject_user;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Standard timeouts
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
         
-        # Admin user detail pages (dynamic user IDs)
         location ~ ^/admin/user/([a-zA-Z0-9_-]+)$ {
             limit_req zone=admin_unlimited burst=20 nodelay;
-            
             proxy_pass http://quart_backend/admin/user/$1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Extended timeouts for user detail loading
-            proxy_connect_timeout 15s;
-            proxy_send_timeout 45s;
-            proxy_read_timeout 60s;
         }
         
-        # Admin user deletion (dynamic user IDs)
         location ~ ^/admin/user/([a-zA-Z0-9_-]+)/delete$ {
             limit_req zone=admin_unlimited burst=5 nodelay;
-            
             proxy_pass http://quart_backend/admin/user/$1/delete;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Extended timeouts for user deletion
-            proxy_connect_timeout 15s;
-            proxy_send_timeout 45s;
-            proxy_read_timeout 60s;
         }
         
         # =====================================================
@@ -372,96 +219,7 @@ http {
         # =====================================================
         location = / {
             limit_req zone=strict_limit burst=10 nodelay;
-            
             proxy_pass http://quart_backend/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Standard timeouts
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
-        }
-        
-        # =====================================================
-        # SECURITY BLOCKS - Block everything else
-        # =====================================================
-        
-        # Block access to sensitive paths
-        location ~ /\. {
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
-        }
-        
-        # Block access to common attack vectors and script files
-        location ~ \.(php|asp|aspx|jsp|cgi|pl|py|rb|sh|bat|cmd)$ {
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
-        }
-                
-        # Block common config and backup files
-        location ~ \.(conf|config|bak|backup|old|orig|save|swp|tmp|temp|log)$ {
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
-        }
-        
-        # Block SQL dumps and database files
-        location ~ \.(sql|db|sqlite|sqlite3|mdb)$ {
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
-        }
-        
-        # Block version control directories
-        location ~ /\.(git|svn|hg|bzr) {
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
-        }
-        
-        # Block common scanning paths
-        location ~ ^/(robots\.txt|favicon\.ico|sitemap\.xml|crossdomain\.xml)$ {
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
-        }
-        
-        # Block any other chat paths not explicitly allowed
-        location ~ ^/chat/ {
-            # This catches any /chat/* paths not explicitly defined above
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
-        }
-        
-        # Block any other admin paths not explicitly allowed
-        #location ~ ^/admin/ {
-            # This catches any /admin/* paths not explicitly defined above
-        #    deny all;
-        #    access_log off;
-        #    log_not_found off;
-        #    return 404;
-        #}
-        
-        # FINAL CATCH-ALL - Block everything else
-        location / {
-            # This catches ANY path not explicitly defined above
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
         }
         
         # =====================================================
@@ -485,7 +243,6 @@ http {
             internal;
         }
         
-        # Custom 404 page for blocked routes
         error_page 404 /404.html;
         location = /404.html {
             root /usr/share/nginx/html;
