--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-# .env file - Complete Environment-Driven Configuration
+# .env file - FIXED Configuration for Devstral
 # =============================================================================
 # 🔧 CONFIGURE ME - CHANGE THESE SETTINGS BEFORE DEPLOYMENT
 # =============================================================================
-# CRITICAL: Change these values for security and customization!
 
 # Quart Application Security (REQUIRED TO CHANGE)
 SECRET_KEY=CHANGE-THIS-TO-A-SECURE-RANDOM-STRING-32-CHARACTERS-MINIMUM
@@ -16,23 +15,24 @@ ALLOWED_DOMAINS=localhost,127.0.0.1,ai.junder.uk
 # Redis Connection (CHANGE IF USING EXTERNAL REDIS)
 REDIS_URL=redis://redis:6379/0
 
-# Model Configuration (CHANGE FOR DIFFERENT MODELS)
-OLLAMA_MODEL=devstral:24b
-MODEL_DISPLAY_NAME=Devstral 24B
-MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
+# Model Configuration - FIXED for actual model
+# Based on logs, the actual model appears to be "Devstral Small 2505"
+OLLAMA_MODEL=devstral
+MODEL_DISPLAY_NAME=Devstral Small 2505
+MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters)
 
-# Performance Tuning (ADJUST FOR YOUR HARDWARE)
-OLLAMA_GPU_LAYERS=12                     # Adjust based on your GPU VRAM
-OLLAMA_CONTEXT_SIZE=1024                 # Adjust based on your needs
-OLLAMA_BATCH_SIZE=256                    # Increased for faster generation
+# Performance Tuning - REDUCED for stability
+OLLAMA_GPU_LAYERS=35                     # REDUCED from 41 to avoid VRAM issues
+OLLAMA_CONTEXT_SIZE=8192                 # REDUCED from 1024 for better memory usage
+OLLAMA_BATCH_SIZE=512                    # Increased for faster generation
 OLLAMA_NUM_THREAD=8                      # Adjust based on your CPU cores
 
 # User Management (ADJUST FOR YOUR NEEDS)
 MAX_CHATS_PER_USER=1                     # Maximum chats per user
 MAX_PENDING_USERS=2                      # Maximum pending user registrations
-RATE_LIMIT_MESSAGES_PER_MINUTE=100       # INCREASED: Rate limit per user (was 10)
+RATE_LIMIT_MESSAGES_PER_MINUTE=100       # Rate limit per user
 
-# Resource Limits (ADJUST FOR YOUR SYSTEM)
+# Resource Limits - ADJUSTED
 OLLAMA_MEMORY=16G                        # Total RAM for Ollama
 OLLAMA_CPU=4                             # CPU cores for Ollama
 QUART_APP_MEMORY=1G                      # RAM for web app
@@ -49,26 +49,8 @@ NGINX_MEMORY=1G
 NGINX_CPU=1
 
 # =============================================================================
-# 🌐 NETWORK OPTIMIZATION SETTINGS
+# EXTENDED TIMEOUT SETTINGS - FIXED
 # =============================================================================
-# Network buffer sizes (bytes)
-#NET_CORE_RMEM_MAX=134217728
-#NET_CORE_WMEM_MAX=134217728
-#NET_IPV4_TCP_RMEM=4096 131072 134217728
-#NET_IPV4_TCP_WMEM=4096 131072 134217728
-
-# File descriptor limits
-#ULIMIT_NOFILE_SOFT=65536
-#ULIMIT_NOFILE_HARD=65536
-
-# Docker network settings
-#DOCKER_SUBNET=172.21.0.0/16
-#DOCKER_MTU=1500
-
-# =============================================================================
-# UNLIMITED TIMEOUT SETTINGS
-# =============================================================================
-# Set to 0 for unlimited, or specific seconds
 UNLIMITED_TIMEOUT=0
 STREAMING_TIMEOUT=0
 AIOHTTP_TOTAL_TIMEOUT=0
@@ -76,18 +58,13 @@ AIOHTTP_CONNECT_TIMEOUT=0
 AIOHTTP_READ_TIMEOUT=0
 
 # =============================================================================
-# 🤖 CURRENT MODEL CONFIGURATION
-# =============================================================================
-# Models are configured in the "CONFIGURE ME" section above
-
-# =============================================================================
-# ⚡ OLLAMA PERFORMANCE PARAMETERS
+# ⚡ OLLAMA PERFORMANCE PARAMETERS - FIXED
 # =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
 OLLAMA_KEEP_ALIVE=-1                     # Permanent loading
 OLLAMA_MAX_LOADED_MODELS=1               # Only one model
-OLLAMA_LOAD_TIMEOUT=30m                  # Model loading timeout
+OLLAMA_LOAD_TIMEOUT=10m                  # EXTENDED: Model loading timeout
 OLLAMA_NOPRUNE=1                         # Never unload
 OLLAMA_MLOCK=1                           # Lock in RAM/VRAM
 OLLAMA_MMAP=0                            # Disable memory mapping
@@ -95,7 +72,7 @@ OLLAMA_NUMA=0                            # Disable NUMA
 OLLAMA_MAIN_GPU=0                        # Primary GPU
 
 # =============================================================================
-# 🎛️ MODELFILE PARAMETERS
+# 🎛️ MODELFILE PARAMETERS - OPTIMIZED
 # =============================================================================
 MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
@@ -109,10 +86,10 @@ MODEL_USE_MLOCK=true                     # BOOLEAN: true to enable mlock
 MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 
 # =============================================================================
-# 📱 APPLICATION PERFORMANCE SETTINGS
+# 📱 APPLICATION PERFORMANCE SETTINGS - INCREASED TIMEOUTS
 # =============================================================================
-MODEL_MAX_TOKENS=64                    # Increased max tokens
-MODEL_TIMEOUT=0                          # 0 = unlimited timeout
+MODEL_MAX_TOKENS=256                     # Increased max tokens
+MODEL_TIMEOUT=300                        # INCREASED: 5 minutes instead of unlimited
 CHAT_HISTORY_LIMIT=15
 CHAT_CACHE_TTL_SECONDS=7200
 SSE_MAX_CONNECTIONS=25
