--- a/.env
+++ b/.env
@@ -21,10 +21,10 @@ OLLAMA_MODEL=devstral
 MODEL_DISPLAY_NAME=Devstral Small 2505
 MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters)
 
-# Performance Tuning - REDUCED for stability
-OLLAMA_GPU_LAYERS=35                     # REDUCED from 41 to avoid VRAM issues
-OLLAMA_CONTEXT_SIZE=8192                 # REDUCED from 1024 for better memory usage
-OLLAMA_BATCH_SIZE=512                    # Increased for faster generation
+# Performance Tuning - CONSERVATIVE for stability
+OLLAMA_GPU_LAYERS=12                     # REDUCED from 35 to avoid VRAM issues
+OLLAMA_CONTEXT_SIZE=2048                 # REDUCED from 8192 for stability
+OLLAMA_BATCH_SIZE=256                    # REDUCED from 512 for stability
 OLLAMA_NUM_THREAD=8                      # Adjust based on your CPU cores
 
 # User Management (ADJUST FOR YOUR NEEDS)
@@ -62,9 +62,9 @@ AIOHTTP_READ_TIMEOUT=0
 # =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
-OLLAMA_KEEP_ALIVE=-1                     # Permanent loading
+OLLAMA_KEEP_ALIVE=10m                    # FIXED: Use proper duration instead of -1
 OLLAMA_MAX_LOADED_MODELS=1               # Only one model
-OLLAMA_LOAD_TIMEOUT=10m                  # EXTENDED: Model loading timeout
+OLLAMA_LOAD_TIMEOUT=15m                  # INCREASED: Model loading timeout
 OLLAMA_NOPRUNE=1                         # Never unload
 OLLAMA_MLOCK=1                           # Lock in RAM/VRAM
 OLLAMA_MMAP=0                            # Disable memory mapping
@@ -86,10 +86,10 @@ MODEL_USE_MLOCK=true                     # BOOLEAN: true to enable mlock
 MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 
 # =============================================================================
-# 📱 APPLICATION PERFORMANCE SETTINGS - INCREASED TIMEOUTS
+# 📱 APPLICATION PERFORMANCE SETTINGS - CONSERVATIVE
 # =============================================================================
-MODEL_MAX_TOKENS=256                     # Increased max tokens
-MODEL_TIMEOUT=300                        # INCREASED: 5 minutes instead of unlimited
+MODEL_MAX_TOKENS=128                     # REDUCED max tokens for stability
+MODEL_TIMEOUT=180                        # REDUCED: 3 minutes timeout
 CHAT_HISTORY_LIMIT=15
 CHAT_CACHE_TTL_SECONDS=7200
 SSE_MAX_CONNECTIONS=25
@@ -104,7 +104,7 @@ USER_ID_COUNTER_START=1000               # Starting ID for regular users
 # 🖥️ NVIDIA GPU SETTINGS
 # =============================================================================
 NVIDIA_VISIBLE_DEVICES=0
-CUDA_MEMORY_FRACTION=0.95
+CUDA_MEMORY_FRACTION=0.90                # REDUCED from 0.95 for stability
 LOG_LEVEL=INFO
 LOG_FORMAT=json
 
