--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# .env file - FIXED Configuration for Devstral
+# .env file - FIXED Configuration for Connection Issues
 # =============================================================================
 # 🔧 CONFIGURE ME - CHANGE THESE SETTINGS BEFORE DEPLOYMENT
 # =============================================================================
@@ -21,20 +21,20 @@ OLLAMA_MODEL=devstral
 MODEL_DISPLAY_NAME=Devstral Small 2505
 MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters)
 
-# Performance Tuning - CONSERVATIVE for stability
-OLLAMA_GPU_LAYERS=12                     # REDUCED from 35 to avoid VRAM issues
-OLLAMA_CONTEXT_SIZE=2048                 # REDUCED from 8192 for stability
-OLLAMA_BATCH_SIZE=256                    # REDUCED from 512 for stability
-OLLAMA_NUM_THREAD=8                      # Adjust based on your CPU cores
+# Performance Tuning - ULTRA CONSERVATIVE for stability
+OLLAMA_GPU_LAYERS=12                      # REDUCED from 8 to 6 to fix connection issues
+OLLAMA_CONTEXT_SIZE=512                  # REDUCED from 1024 for stability
+OLLAMA_BATCH_SIZE=64                     # REDUCED from 128 for stability
+OLLAMA_NUM_THREAD=2                      # REDUCED from 4 for stability
 
 # User Management (ADJUST FOR YOUR NEEDS)
 MAX_CHATS_PER_USER=1                     # Maximum chats per user
 MAX_PENDING_USERS=2                      # Maximum pending user registrations
 RATE_LIMIT_MESSAGES_PER_MINUTE=100       # Rate limit per user
 
-# Resource Limits - ADJUSTED
-OLLAMA_MEMORY=16G                        # Total RAM for Ollama
-OLLAMA_CPU=4                             # CPU cores for Ollama
+# Resource Limits - REDUCED for stability
+OLLAMA_MEMORY=15G                        # REDUCED from 16G
+OLLAMA_CPU=4                             # REDUCED from 4
 QUART_APP_MEMORY=1G                      # RAM for web app
 NGINX_MEMORY=1G                          # RAM for nginx
 
@@ -49,22 +49,22 @@ NGINX_MEMORY=1G
 NGINX_CPU=1
 
 # =============================================================================
-# EXTENDED TIMEOUT SETTINGS - FIXED
+# TIMEOUT SETTINGS - CONSERVATIVE
 # =============================================================================
-UNLIMITED_TIMEOUT=0
-STREAMING_TIMEOUT=0
-AIOHTTP_TOTAL_TIMEOUT=0
-AIOHTTP_CONNECT_TIMEOUT=0
-AIOHTTP_READ_TIMEOUT=0
+UNLIMITED_TIMEOUT=300                    # 5 minutes instead of unlimited
+STREAMING_TIMEOUT=300                    # 5 minutes instead of unlimited
+AIOHTTP_TOTAL_TIMEOUT=300                # 5 minutes
+AIOHTTP_CONNECT_TIMEOUT=30               # 30 seconds
+AIOHTTP_READ_TIMEOUT=300                 # 5 minutes
 
 # =============================================================================
-# ⚡ OLLAMA PERFORMANCE PARAMETERS - FIXED
+# ⚡ OLLAMA PERFORMANCE PARAMETERS - CONSERVATIVE
 # =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
-OLLAMA_KEEP_ALIVE=10m                    # FIXED: Use proper duration instead of -1
+OLLAMA_KEEP_ALIVE=5m                     # REDUCED from 10m
 OLLAMA_MAX_LOADED_MODELS=1               # Only one model
-OLLAMA_LOAD_TIMEOUT=15m                  # INCREASED: Model loading timeout
+OLLAMA_LOAD_TIMEOUT=10m                  # REDUCED from 15m
 OLLAMA_NOPRUNE=1                         # Never unload
 OLLAMA_MLOCK=1                           # Lock in RAM/VRAM
 OLLAMA_MMAP=0                            # Disable memory mapping
@@ -72,7 +72,7 @@ OLLAMA_NUMA=0                            # Disable NUMA
 OLLAMA_MAIN_GPU=0                        # Primary GPU
 
 # =============================================================================
-# 🎛️ MODELFILE PARAMETERS - OPTIMIZED
+# 🎛️ MODELFILE PARAMETERS - CONSERVATIVE
 # =============================================================================
 MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
@@ -86,13 +86,13 @@ MODEL_USE_MLOCK=true                     # BOOLEAN: true to enable mlock
 MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 
 # =============================================================================
-# 📱 APPLICATION PERFORMANCE SETTINGS - CONSERVATIVE
+# 📱 APPLICATION PERFORMANCE SETTINGS - ULTRA CONSERVATIVE
 # =============================================================================
-MODEL_MAX_TOKENS=128                     # REDUCED max tokens for stability
-MODEL_TIMEOUT=180                        # REDUCED: 3 minutes timeout
-CHAT_HISTORY_LIMIT=15
-CHAT_CACHE_TTL_SECONDS=7200
-SSE_MAX_CONNECTIONS=25
+MODEL_MAX_TOKENS=32                      # REDUCED from 64 for faster responses
+MODEL_TIMEOUT=60                         # REDUCED to 1 minute
+CHAT_HISTORY_LIMIT=5                     # REDUCED from 10
+CHAT_CACHE_TTL_SECONDS=1800              # REDUCED from 3600
+SSE_MAX_CONNECTIONS=5                    # REDUCED from 10
 
 # =============================================================================
 # 👥 CHAT AND USER MANAGEMENT SETTINGS
@@ -101,10 +101,10 @@ RATE_LIMIT_WINDOW=60                     # Rate limit window in seconds
 USER_ID_COUNTER_START=1000               # Starting ID for regular users
 
 # =============================================================================
-# 🖥️ NVIDIA GPU SETTINGS
+# 🖥️ NVIDIA GPU SETTINGS - CONSERVATIVE
 # =============================================================================
 NVIDIA_VISIBLE_DEVICES=0
-CUDA_MEMORY_FRACTION=0.90                # REDUCED from 0.95 for stability
+CUDA_MEMORY_FRACTION=0.80                # REDUCED from 0.90 for stability
 LOG_LEVEL=INFO
 LOG_FORMAT=json
 
@@ -126,24 +126,24 @@ MIN_USERNAME_LENGTH=3
 MAX_USERNAME_LENGTH=50
 MIN_PASSWORD_LENGTH=6
 MAX_PASSWORD_LENGTH=128
-MAX_MESSAGE_LENGTH=10000
+MAX_MESSAGE_LENGTH=5000                  # REDUCED from 10000
 MAX_FILENAME_LENGTH=255
 CSRF_TOKEN_LENGTH=32
 
 # =============================================================================
 # 📦 REDIS CONFIGURATION
 # =============================================================================
-REDIS_MAX_CONNECTIONS=50
+REDIS_MAX_CONNECTIONS=25                 # REDUCED from 50
 REDIS_SOCKET_KEEPALIVE=true
 REDIS_RETRY_ON_TIMEOUT=true
 REDIS_DECODE_RESPONSES=true
 
 # =============================================================================
-# 🚀 AIOHTTP CLIENT CONFIGURATION
+# 🚀 AIOHTTP CLIENT CONFIGURATION - CONSERVATIVE
 # =============================================================================
-AIOHTTP_LIMIT=0                         # 0 = unlimited connections
-AIOHTTP_LIMIT_PER_HOST=0                # 0 = unlimited per host
-AIOHTTP_KEEPALIVE_TIMEOUT=0             # 0 = unlimited keepalive
-AIOHTTP_ENABLE_CLEANUP_CLOSED=false     # Disable cleanup for performance
-AIOHTTP_FORCE_CLOSE=false               # Keep connections open
-AIOHTTP_TTL_DNS_CACHE=0                 # 0 = unlimited DNS cache
+AIOHTTP_LIMIT=50                         # CHANGED from 0 (unlimited) to 50
+AIOHTTP_LIMIT_PER_HOST=20                # CHANGED from 0 to 20
+AIOHTTP_KEEPALIVE_TIMEOUT=30             # CHANGED from 0 to 30 seconds
+AIOHTTP_ENABLE_CLEANUP_CLOSED=true       # CHANGED from false to true
+AIOHTTP_FORCE_CLOSE=false                # Keep connections open
+AIOHTTP_TTL_DNS_CACHE=300                # CHANGED from 0 to 5 minutes
